clarusshop/templates/account-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-deployment
  labels:
    app: account
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account
  template:
    metadata:
      labels:
        app: account
    spec:
      containers:
      - name: account
        image: clarusway/clarusshop-account:ng-ing
        ports:
        - containerPort: 80
