clarusshop/templates/inventory-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-deployment
  labels:
    app: inventory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      containers:
      - name: inventory
        image: clarusway/clarusshop-inventory:ng-ing
        ports:
        - containerPort: 80
