clarusshop/templates/shipping-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping-deployment
  labels:
    app: shipping
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipping
  template:
    metadata:
      labels:
        app: shipping
    spec:
      containers:
      - name: shipping
        image: clarusway/clarusshop-shipping:ng-ing
        ports:
        - containerPort: 80
