clarusshop/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress

metadata:
  name: ingress-clarusshop
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:     
          - path: /account/?(.*)
            backend:
              serviceName: account-service
              servicePort: 80
          - path: /inventory/?(.*)
            backend:
              serviceName: inventory-service
              servicePort: 80
          - path: /shipping/?(.*)
            backend:
              serviceName: shipping-service
              servicePort: 80
          - path: /?(.*)
            backend:
              serviceName: storefront-service
              servicePort: 80
